Adjust CSS for home page responsive issue on tablets

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,20 @@
 /* Body */
+
 body {
     background-color: white;
-    padding-bottom: 95px;
+    padding-bottom: 6rem;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-variation-settings: "wdth" 100;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Navbar */
@@ -169,7 +179,7 @@ body {
 
 /* Media queries */
 
-/* Adjust cards for tablets */ 
+/* Adjust cards for tablets - as titles were not fitting completely */ 
 @media (min-width: 576px) and (max-width: 768px) {
     .card {
         flex: 0 0 75%;
